# jantardosfilosofos

./: .gitignore  CMakeLists.txt  README.md  common.h  coordenador.c  filosofo.c
